Add mirrored release update checks